--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
         <p class="copyright">
           &copy; 2024
-          <a class="twitter-link" target="_blank" href="/">forkify</a>. All
+          <a class="twitter-link" href="/">forkify</a>. All
           rights reserved.
         </p>
       </div>
